# eduki_data_project

./: .envrc  .private_key.pem  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: google_service_credentials.ini  paths.ini  sql_schema.yml
eduki_data_engineering/: README.md  bigquery_ingestion_operator.py  postgresql_ingestion_operator.py
eduki_data_engineering/configs/: big_query.ini  bq_schema.yml  logging.ini  paths.ini  postgresql_parameters.ini
eduki_data_engineering/data/input/: case_data.csv
eduki_data_engineering/utils/: bigquery_client.py  color_log_formatter.py  config_parsers.py  data_processor.py  eduki_root_logger.py  log_message_formatter.py  postgresql_bulk_writer.py
